# rhyus-rust

./: .gitignore  Cargo.toml  README.md  config.toml
.cargo/: config.toml
src/: main.rs
src/api/: mod.rs
src/common/: error.rs  mod.rs
src/conf/: mod.rs
src/model/: auth.rs  chatroom.rs  mod.rs
src/service/: mod.rs  websocket.rs
src/util/: mod.rs
