[package]
name = "rhyus-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# WebSocket 相关
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.21.0"
futures = "0.3.30"

# 序列化
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

# 日志
log = "0.4.20"
env_logger = "0.10.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 工具
once_cell = "1.8"
anyhow = "1.0.79"
thiserror = "2.0.10"
dashmap = "5.5.3"
reqwest = { version = "0.11.23", features = ["json", "rustls-tls"], default-features = false }
url = "2.5.0"
toml = "0.8.8"
